# ChessCraftWeb

./: .gitignore  README.md  docker-compose.yml  helpers.md
algo/: CMakeLists.txt  Dockerfile.algo  main.cpp
backend/: Dockerfile.backend  package-lock.json  package.json  server.js
backend/config/: db.js
backend/controllers/: gameController.js  userController.js
backend/middleware/: auth.js  errorHandler.js
backend/models/: game.js  index.js  user.js
backend/routes/: gameRoutes.js  userRoutes.js
backend/tests/: debugEnv.js  game.test.js  testDbConnection.js  user.test.js
frontend/: Dockerfile.frontend  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  GamesetContext.tsx  index.tsx  sampleGamesetConfig.ts  templatePieces.json
frontend/src/classes/: ChessBoard.ts  ChessBoardPiece.ts  ChessPiece.ts  Gameset.ts  Move.ts  OptionalProperties.ts  PieceMapping.ts
frontend/src/components/: Board.tsx  Button.tsx  ChessPiece.tsx  ExitPanel.tsx  GameSetup.tsx  MenuPanel.tsx  SVGIcon.tsx  SettingsPanel.tsx  Timer.tsx
frontend/src/components/AuthPopup/: AuthPopup.module.css  AuthPopup.tsx
frontend/src/components/Board/: Board.module.css  Board.tsx
frontend/src/components/BoardDimensions/: BoardDimensions.module.css  BoardDimensions.tsx
frontend/src/components/Button/: Button.module.css  Button.tsx
frontend/src/hooks/: usePanel.ts
frontend/src/styles/: App.css  Board.css  FadePanel.css  GameSetup.css  SlidePanel.css
frontend/src/utils/: chess.ts  chessPieces.ts  chessSetup.ts  svgIcons.ts
(+18 files in other folders)
